@@ -2,6 +2,8 @@ python2.3 setup.py -q test
 python2.4 setup.py -q test
 python2.5 setup.py -q test
 python2.6 setup.py -q test
+python2.7 setup.py -q test
+
 rm -rf build
 python3.1 setup.py -q test
 
